--- a/viz/sot_extra_header.html
+++ b/viz/sot_extra_header.html
@@ -20,24 +20,7 @@
 
 <script type="text/javascript" src="/media/sot/cesium/Cesium.js"></script>
 <script type="text/javascript" src="/media/sot/js/modernizr-2.6.2.min.js"></script>
+<script type="text/javascript" src="/media/sot/js/modernizr_load.js"></script>
 
 <link rel="stylesheet" href="/media/sot/css/normalize.css">
 <link rel="stylesheet" href="/media/sot/css/main.css">
-<script type="text/javascript">
-  window.onload = function() {
-    if(window.externalHost){
-      var s = document.createElement('script');
-      s.type = 'text/javascript';
-      s.src = '/media/sot/js/modernizr_load_ie.js';
-      var x = document.getElementsByTagName('script')[0];
-      x.parentNode.insertBefore(s, x);
-    }
-    else{
-      var s = document.createElement('script');
-      s.type = 'text/javascript';
-      s.src = '/media/sot/js/modernizr_load.js';
-      var x = document.getElementsByTagName('script')[0];
-      x.parentNode.insertBefore(s, x);
-    }
-  }
-</script>
