Added preliminary Play/Pause Buttons
Added working preliminary Play and Pause buttons for 508 compliance.

--- a/viz/index.html
+++ b/viz/index.html
@@ -228,7 +228,8 @@
                  alt="Close Button"
                  class="close_button" />
             <h2 id="satellite_name"></h2>
-            <p id="sat_data"></p>
+            <span id="play_button"></span>
+            <span id="pause_button"></span>
             <dl>
               <dt>ID</dt>
                 <dd id="satellite_id"></dd>
