Match More On link text, fix SMD name typo
Fixes #121

--- a/viz/index.html
+++ b/viz/index.html
@@ -249,8 +249,8 @@
                 <dd id="satellite_height"></dd>
             </dl>
             <h3>More on <span id="satellite_name2"></span></h3>
-            <a id="science_url" href="#" target="nasascience">National Space Science Data Center</a>
-            <a id="nssdc_url" href="#" target="nssdc">Science Mission Directive</a>
+            <a id="science_url" href="#" target="nasascience">Science Mission Directorate</a>
+            <a id="nssdc_url" href="#" target="nssdc">National Space Science Data Center</a>
           </div> <!-- /satellite_display -->
         </div> <!-- /cesiumContainer -->
       </div> <!-- /main -->
