Globe = "Earth" (global = "everywhere")
Nit. A two char change.

Fixes #125

--- a/viz/index.html
+++ b/viz/index.html
@@ -166,7 +166,7 @@
                  title="Close Button"
                  alt="Close Button"
                  class="close_button" />
-            <h2>Global Display</h2>
+            <h2>Globe Display</h2>
             <div id="maps">
               <img src="static/images/Map_Displays.png" alt="Map Display"><br>
               <img src="static/images/Bing_1.png"
