Added NASA logo

--- a/viz/index.html
+++ b/viz/index.html
@@ -39,7 +39,7 @@
   <body>
     <div id="wrapper">
       <header id="header">
-        <img src="static/images/Title.png" alt="SOT: Satellite Oribital Tracker" />
+        <img src="static/images/Title.png" alt="NASA's Interactive Satellite Viewe" /> <img src="static/images/NASA_logo.png" alt="NASA" class="float-right" />
       </header>
       <div id="main">
         <div id="cesiumContainer">
