--- a/viz/index.html
+++ b/viz/index.html
@@ -10,6 +10,44 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <script>
       opsmode = 'i'; //GLOBAL for intl, 'i'mproved
+
+      // Pre-loading Images
+      Title = new Image();
+      Title.src = 'static/images/Title.png'
+      NASA_logo = new Image();
+      NASA_logo.src = 'static/images/NASA_logo.png'
+      Zoom_out = new Image();
+      Zoom_out.src = 'static/images/Zoom_out.png'
+      Zoom_in = new Image();
+      Zoom_in.src = 'static/images/Zoom_in.png'
+      Refresh_1 = new Image();
+      Refresh_1.src = 'static/images/Refresh_1.png'
+      Refresh_2 = new Image();
+      Refresh_2.src = 'static/images/Refresh_2.png'
+      Info_1 = new Image();
+      Info_1.src = 'static/images/Info_1.png'
+      Info_2 = new Image();
+      Info_2.src = 'static/images/Info_2.png'
+      Orbit_1 = new Image();
+      Orbit_1.src = 'static/images/Orbit_1.png'
+      Orbit_2 = new Image();
+      Orbit_2.src = 'static/images/Orbit_2.png'
+      Satellite_1 = new Image();
+      Satellite_1.src = 'static/images/Satellite_1.png'
+      Satellite_2 = new Image();
+      Satellite_2.src = 'static/images/Satellite_2.png'
+      Expand_1 = new Image();
+      Expand_1.src = 'static/images/Expand_1.png'
+      Expand_2 = new Image();
+      Expand_2.src = 'static/images/Expand_2b.png'
+      Pause_1 = new Image();
+      Pause_1.src = 'static/images/Pause_1.png'
+      Pause_2 = new Image();
+      Pause_2.src = 'static/images/Pause_2.png'
+      Play_1 = new Image();
+      Play_1.src = 'static/images/Play_1.png'
+      Play_2 = new Image();
+      Play_2.src = 'static/images/Play_2.png'
     </script>
 
     <script type="text/javascript" src="../js/twoline2rv.js"></script>
