Changed Alt Tag for Close Buttons
Changed the alt tag for 508 compliance and better understanding.

--- a/viz/index.html
+++ b/viz/index.html
@@ -136,8 +136,8 @@
           <div id="instructions" class="modal">
             <img src="static/images/close.png"
                  id="instructions_close"
-                 title="Close Button"
-                 alt="Close Button"
+                 title="Close Window"
+                 alt="Close Window"
                  class="close_button" />
             <h2>
               Instructions
@@ -153,8 +153,8 @@
           <div id="satellite_form" class="modal">
             <img src="static/images/close.png"
                  id="satellite_form_close"
-                 title="Close Button"
-                 alt="Close Button"
+                 title="Close Window"
+                 alt="Close Window"
                  class="close_button" />
             <!-- <input type="button" id="satellite_form_close" value="&times;" class="close_button" /> -->
             <form id="controls">
@@ -239,8 +239,8 @@
           <div id="map_display" class="modal">
             <img src="static/images/close.png"
                  id="map_display_close"
-                 title="Close Button"
-                 alt="Close Button"
+                 title="Close Window"
+                 alt="Close Window"
                  class="close_button" />
             <h2>Globe Display</h2>
             <div id="maps">
@@ -298,8 +298,8 @@
           <div id="satellite_display" class="modal">
             <img src="static/images/close.png"
                  id="satellite_display_close"
-                 title="Close Button"
-                 alt="Close Button"
+                 title="Close Window"
+                 alt="Close Window"
                  class="close_button" />
             <h2 id="satellite_name"></h2>
             <img src="static/images/Play_1.png"
