Changed Title to NASA's Interactive Sat Tracker

--- a/viz/index.html
+++ b/viz/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
     <title>
-      SOT: Satellite Orbit Tracker
+      NASA's Interactive Satellite Viewer
     </title>
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <script>
@@ -77,7 +77,7 @@
   <body>
     <div id="wrapper">
       <header id="header">
-        <img src="static/images/Title.png" alt="NASA's Interactive Satellite Viewe" /> <img src="static/images/NASA_logo.png" alt="NASA" class="float-right" />
+        <img src="static/images/Title.png" alt="NASA's Interactive Satellite Viewer" /> <img src="static/images/NASA_logo.png" alt="NASA" class="float-right" />
       </header>
       <div id="main">
         <div id="cesiumContainer">
