Pre-loading Banner
Forgot to preload the banner...

--- a/viz/index.html
+++ b/viz/index.html
@@ -12,6 +12,8 @@
       opsmode = 'i'; //GLOBAL for intl, 'i'mproved
 
       // Pre-loading Images
+      Banner = new Image();
+      Banner.src = 'static/images/Banner.jpg'
       Title = new Image();
       Title.src = 'static/images/Title.png'
       NASA_logo = new Image();
