--- a/viz/sot_extra_header.html
+++ b/viz/sot_extra_header.html
@@ -1,6 +1,47 @@
 <script>
   opsmode = 'i'; //GLOBAL for intl, 'i'mproved
+
+  // Pre-loading Images
+  Banner = new Image();
+  Banner.src = '/media/sot/images/Banner.jpg'
+  Title = new Image();
+  Title.src = '/media/sot/images/Title.png'
+  NASA_logo = new Image();
+  NASA_logo.src = '/media/sot/images/NASA_logo.png'
+  Zoom_out = new Image();
+  Zoom_out.src = '/media/sot/images/Zoom_out.png'
+  Zoom_in = new Image();
+  Zoom_in.src = '/media/sot/images/Zoom_in.png'
+  Refresh_1 = new Image();
+  Refresh_1.src = '/media/sot/images/Refresh_1.png'
+  Refresh_2 = new Image();
+  Refresh_2.src = '/media/sot/images/Refresh_2.png'
+  Info_1 = new Image();
+  Info_1.src = '/media/sot/images/Info_1.png'
+  Info_2 = new Image();
+  Info_2.src = '/media/sot/images/Info_2.png'
+  Orbit_1 = new Image();
+  Orbit_1.src = '/media/sot/images/Orbit_1.png'
+  Orbit_2 = new Image();
+  Orbit_2.src = '/media/sot/images/Orbit_2.png'
+  Satellite_1 = new Image();
+  Satellite_1.src = '/media/sot/images/Satellite_1.png'
+  Satellite_2 = new Image();
+  Satellite_2.src = '/media/sot/images/Satellite_2.png'
+  Expand_1 = new Image();
+  Expand_1.src = '/media/sot/images/Expand_1.png'
+  Expand_2 = new Image();
+  Expand_2.src = '/media/sot/images/Expand_2b.png'
+  Pause_1 = new Image();
+  Pause_1.src = '/media/sot/images/Pause_1.png'
+  Pause_2 = new Image();
+  Pause_2.src = '/media/sot/images/Pause_2.png'
+  Play_1 = new Image();
+  Play_1.src = '/media/sot/images/Play_1.png'
+  Play_2 = new Image();
+  Play_2.src = '/media/sot/images/Play_2.png'
 </script>
+
 
 <script type="text/javascript" src="/media/sot/js/twoline2rv.js"></script>
 <script type="text/javascript" src="/media/sot/js/getgravc.js"></script>
