Some fixes for Monty.

--- a/viz/sot_body.html
+++ b/viz/sot_body.html
@@ -1,5 +1,5 @@
 <div id="wrapper">
-      <header id="header">
+      <header id="isat_header">
         <img src="/media/sot/images/Title.png" alt="NASA's Interactive Satellite Viewer" /> <img src="/media/sot/images/NASA_logo.png" alt="NASA" class="float-right" />
       </header>
       <div id="main">
