Remove embarassing BUG labels
From the earliest days of the calculations.
The numbers *are* wrong (negative altitude??)
but lets not point it out, ok?

--- a/viz/not_supported.html
+++ b/viz/not_supported.html
@@ -193,10 +193,10 @@
                 <th>X Km</th>
                 <th>Y Km</th>
                 <th>Z Km</th>
-                <th>Velocity (BUG)</th>
+                <th>Velocity</th>
                 <th>Latitude</th>
-                <th>Longitude (BUG)</th>
-                <th>Height Km/? (BUG)</th>
+                <th>Longitude</th>
+                <th>Height</th>
               </tr>
             </thead>
             <!-- tbody destroyed and recreated by javascript -->
