Provide actual links to browser downloads.

--- a/viz/not_supported.html
+++ b/viz/not_supported.html
@@ -79,14 +79,42 @@
 
       <div id="browser_list">
         <dl>
-          <dt><img src="static/images/Chrome_Logo.png" alt="Chrome Browser" height="65px" width="65px"></dt>
-          <dd><b>Chrome</b><br /> <a href="#">For Windows</a> | <a href="#">For Mac</a></dd>
-          <dt><img src="static/images/Firefox_Logo.png" alt="Firefox Browser" height="65px" width="65px"></dt>
-          <dd><b>Firefox</b><br /> <a href="#">For Windows</a> | <a href="#">For Mac</a></dd>
-          <dt><img src="static/images/IE_Logo.png" alt="Internet Explorer Browser" height="65px" width="65px"></dt>
-          <dd><b>Internet Explorer</b><br /> <a href="#">For Windows</a> | <a href="#">For Mac</a></dd>
-          <dt><img src="static/images/Safari_Logo.png" alt="Safari Browser" height="65px" width="65px"></dt>
-          <dd><b>Safari</b><br /> <a href="#">For Mac</a></dd>
+          <dt>
+            <img src="static/images/Chrome_Logo.png"
+                 alt="Chrome Browser"
+                 height="65px" width="65px" />
+          </dt>
+          <dd>
+            <b>Chrome</b><br />
+            <a href="https://www.google.com/intl/en/chrome/browser/">For Windows, Mac, and Linux</a>
+          </dd>
+          <dt>
+            <img src="static/images/Firefox_Logo.png"
+                 alt="Firefox Browser"
+                 height="65px" width="65px" />
+          </dt>
+          <dd>
+            <b>Firefox</b><br />
+            <a href="http://www.mozilla.org/en-US/firefox/new/">For Windows, Mac, and Linux</a>
+          </dd>
+          <dt>
+            <img src="static/images/IE_Logo.png"
+                 alt="Internet Explorer Browser"
+                 height="65px" width="65px" />
+          </dt>
+          <dd>
+            <b>Internet Explorer</b><br />
+            <a href="http://windows.microsoft.com/en-us/internet-explorer/download-ie">For Windows</a>
+          </dd>
+          <dt>
+            <img src="static/images/Safari_Logo.png"
+                 alt="Safari Browser"
+                 height="65px" width="65px" />
+          </dt>
+          <dd>
+            <b>Safari</b><br />
+            <a href="http://support.apple.com/downloads/#internet">For Mac</a>
+          </dd>
         </dl>
       </div>
       <button id="not_supported_close"
