Changed lat,lon and alt

--- a/viz/not_supported.html
+++ b/viz/not_supported.html
@@ -10,6 +10,9 @@
       opsmode = 'i'; //GLOBAL for intl, 'i'mproved
     </script>
 
+    <script type="text/javascript" src="../js/post.js"></script>
+    <script type="text/javascript" src="../js/math_utils.js"></script>
+        
     <script type="text/javascript" src="../js/twoline2rv.js"></script>
     <script type="text/javascript" src="../js/getgravc.js"></script>
     <script type="text/javascript" src="../js/days2mdh.js"></script>
