Combining and magnification of isat js files.

--- a/viz/index.html
+++ b/viz/index.html
@@ -52,21 +52,7 @@
       Play_2.src = 'static/images/Play_2.png'
     </script>
 
-    <script type="text/javascript" src="../js/twoline2rv.js"></script>
-    <script type="text/javascript" src="../js/getgravc.js"></script>
-    <script type="text/javascript" src="../js/days2mdh.js"></script>
-    <script type="text/javascript" src="../js/jday.js"></script>
-    <script type="text/javascript" src="../js/sgp4init.js"></script>
-    <script type="text/javascript" src="../js/initl.js"></script>
-    <script type="text/javascript" src="../js/gstime.js"></script>
-    <script type="text/javascript" src="../js/sgp4.js"></script>
-
-    <script type="text/javascript" src="../js/dscom.js"></script>
-    <script type="text/javascript" src="../js/dpper.js"></script>
-    <script type="text/javascript" src="../js/dsinit.js"></script>
-    <script type="text/javascript" src="../js/dspace.js"></script>
-
-    <script type="text/javascript" src="tle.js"></script>
+    <script type="text/javascript" src="../js/isat.min.js"></script>
 
     <script type="text/javascript" src="cesium/Cesium.js"></script>
     <script type="text/javascript" src="static/js/modernizr-2.6.2.min.js"></script>
